--- a/task-manager-aws-client/package.json
+++ b/task-manager-aws-client/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
